modules/sequrity/main.tf


resource "aws_security_group" "ecs_service_sg" {
  name   = "Projectecs-sg1"
  vpc_id = var.vpc_id


  ingress {
    description = "Allow HTTPS from ALB"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    //security_groups = [aws_security_group.alb_sg.id]
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow port 5000 for Flask app"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "Projectecs-sg1"
    Project = "swati-project"
  }
}
resource "aws_security_group" "ecs_alb_sg" {
  name        = "dev-alb-sg"
  description = "Allow public access to ALB"
  vpc_id      = var.vpc_id



  ingress {
    description = "Allow HTTPS"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "dev-alb-sg"
  }
}
